fix and add compose

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -7,6 +7,14 @@ WORKDIR /app
 
 ARG FREESOUND_CLIENT_ID
 ARG FREESOUND_API_KEY
+ARG CLOUDFLARE_ACCOUNT_ID
+ARG R2_ACCESS_KEY_ID
+ARG R2_SECRET_ACCESS_KEY
+ARG R2_BUCKET_NAME
+ARG MODAL_TRANSCRIPTION_URL
+ARG BETTER_AUTH_SECRET
+ARG UPSTASH_REDIS_REST_URL
+ARG UPSTASH_REDIS_REST_TOKEN
 
 COPY package.json package.json
 COPY bun.lock bun.lock
@@ -18,9 +26,25 @@ COPY packages/auth/package.json packages/auth/package.json
 
 RUN bun install
 
-COPY apps/web/ apps/web/
-COPY packages/db/ packages/db/
-COPY packages/auth/ packages/auth/
+# Copy source files, excluding node_modules
+COPY apps/web/src apps/web/src
+COPY apps/web/public apps/web/public
+COPY apps/web/migrations apps/web/migrations
+COPY apps/web/*.ts apps/web/
+COPY apps/web/*.js apps/web/
+COPY apps/web/*.mjs apps/web/
+COPY apps/web/*.json apps/web/
+COPY apps/web/*.md apps/web/
+COPY apps/web/Dockerfile apps/web/Dockerfile
+
+COPY packages/db/src packages/db/src
+COPY packages/db/migrations packages/db/migrations
+COPY packages/db/*.ts packages/db/
+COPY packages/db/*.json packages/db/
+
+COPY packages/auth/src packages/auth/src
+COPY packages/auth/*.ts packages/auth/
+COPY packages/auth/*.json packages/auth/
 
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
@@ -33,6 +57,14 @@ ENV NEXT_PUBLIC_BETTER_AUTH_URL="http://localhost:3000"
 
 ENV FREESOUND_CLIENT_ID=$FREESOUND_CLIENT_ID
 ENV FREESOUND_API_KEY=$FREESOUND_API_KEY
+ENV CLOUDFLARE_ACCOUNT_ID=$CLOUDFLARE_ACCOUNT_ID
+ENV R2_ACCESS_KEY_ID=$R2_ACCESS_KEY_ID
+ENV R2_SECRET_ACCESS_KEY=$R2_SECRET_ACCESS_KEY
+ENV R2_BUCKET_NAME=$R2_BUCKET_NAME
+ENV MODAL_TRANSCRIPTION_URL=$MODAL_TRANSCRIPTION_URL
+ENV BETTER_AUTH_SECRET=$BETTER_AUTH_SECRET
+ENV UPSTASH_REDIS_REST_URL=$UPSTASH_REDIS_REST_URL
+ENV UPSTASH_REDIS_REST_TOKEN=$UPSTASH_REDIS_REST_TOKEN
 
 WORKDIR /app/apps/web
 RUN bun run build
